# tan

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  flake.nix  tan.nix
src/: app.rs  color.rs  command.rs  common.rs  helper.rs  io.rs  main.rs  modal.rs  name.rs  normal.rs  render.rs  view.rs  visual.rs
