[package]
name = "tantan"
version = "0.1.0"
description = "Simple vim-like tool for NER annotation"
repository = "https://github.com/vglfr/tan"
license = "MIT"
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.18", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["serde"] }
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tap = "1.0.1"
